<resources>
    <string name="app_name">MainApplication</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="let_s_you_in">Let\'s You In</string>
    <string name="continue_with_facebook">continue with facebook</string>
    <string name="continue_with_apple">continue with apple</string>
    <string name="continue_with_google">continue with google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_button">backButton</string>
    <string name="or">or</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="sign_up_btn_text">Sign Up</string>
    <string name="or_continue_with">or continue with</string>
    <string name="remember_me">Remember Me</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="category_text">%1$s %2$s</string>
    <string name="my_orders">My Orders</string>
    <string name="pending">Pending</string>
    <string name="delivered">Delivered</string>
    <string name="delivering">Delivering</string>
    <string name="cancelled">Cancelled</string>

</resources>