<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backBtn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/return_button"
        android:contentDescription="@string/backbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgWelcome"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/main_img"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/create_your_account"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgWelcome" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/edits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordered_stroke"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="36dp"
                android:paddingTop="16dp"
                android:paddingEnd="0dp"
                android:paddingBottom="16dp"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="16dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/icon_email" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordered_stroke"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="36dp"
                android:paddingTop="16dp"
                android:paddingEnd="0dp"
                android:paddingBottom="16dp"
                android:textSize="16sp"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/icon_lock" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/passwordVisibility"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/icon_vis" />

        </FrameLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_sign_in">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@drawable/line_gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/or_continue_with" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@drawable/line_gray" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bordered_black"
        android:padding="12dp"
        android:text="@string/sign_up_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/remember_me"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edits" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/bordered_stroke"
            android:padding="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_fb" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/bordered_stroke"
            android:padding="12dp"
            android:scaleType="centerCrop"
            android:src="@drawable/main_img" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/bordered_stroke"
            android:padding="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_yt" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icons">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="#808080" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/singUp"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
